# tutorial-ipc

./: .gitattributes  .gitignore  Dockerfile  README.md  dockerw.bat
src/: run.sh
src/base/loop/: CMakeLists.txt  example.sh  main.cpp
src/message-queue/: README.md  example.sh
src/message-queue/consumer1/: main.cpp
src/message-queue/consumer2/: main.cpp
src/message-queue/producer/: main.cpp
src/pipes/anonymous/: CMakeLists.txt  README.md  example.sh
src/pipes/anonymous/case1/: CMakeLists.txt  main.cpp
src/pipes/anonymous/case2/: CMakeLists.txt  main.cpp
src/pipes/named/: README.md  example.sh
src/pipes/named/consumer/: main.cpp
src/pipes/named/producer/: main.cpp
src/semaphores/: README.md  example.sh
src/semaphores/producer/: main.cpp
src/shared-files/: README.md  example.sh
src/shared-files/consumer/: main.cpp
src/shared-files/producer/: main.cpp
src/shared-memory/: CMakeLists.txt  README.md
src/shared-memory/consumer1/: CMakeLists.txt  main.cpp
src/shared-memory/consumer2/: CMakeLists.txt
src/shared-memory/producer/: CMakeLists.txt
src/signals/: README.md  example.sh
src/signals/consumer/: main.cpp
src/signals/producer/: main.cpp
src/socket/domain/: README.md  example.sh
src/socket/domain/consumer/: main.cpp
src/socket/domain/producer/: main.cpp
src/socket/internet/: README.md
src/socket/internet/consumer/: CMakeLists.txt  main.cpp
src/socket/internet/producer/: main.cpp
